--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: card_scanner
 description: Fast, Accurate and Secure Credit & Debit card scanning library for flutter.
-version: 1.0.1-prerelease
+version: 1.1.0
 homepage: https://github.com/nateshmbhat/card-scanner-flutter
 repository: https://github.com/nateshmbhat/card-scanner-flutter
 
